# fory

./: .asf.yaml  .bazelrc  .gitignore  AGENTS.md  BUILD  BUILD.backup  BUILD.new  MODULE.bazel  README.md  WORKSPACE  debug_buffer.py  debug_field_encoding.py  debug_java_detailed.py  debug_java_serializer.py  final_compatibility_test.py  licenserc.toml  requirements_lock.txt  simple_test.py  test_comprehensive_serializer.py  test_cython_java_serializer.py  test_cython_java_serializer_clean.py
.agents/: docs-and-formatting.md
.agents/languages/: cpp.md  csharp.md  dart.md  java.md  javascript.md  kotlin.md  python.md  rust.md  swift.md
.agents/testing/: integration-tests.md
.github/: sync.yml
.github/workflows/: ci.yml  lint.yml  release-dart.yaml  release-java-snapshot.yaml
bazel/: cython.BUILD  cython_library.bzl  fory_deps_setup.bzl  python_configure.bzl
benchmarks/: plot_style.py
benchmarks/cpp/: CMakeLists.txt  README.md  benchmark.cc  benchmark_report.py  run.sh
benchmarks/csharp/: BenchmarkModels.cs  BenchmarkSerializers.cs  Program.cs  README.md  benchmark_report.py  run.sh
benchmarks/dart/: README.md  analysis_options.yaml  benchmark_report.py  build.yaml  pubspec.yaml  run.sh
benchmarks/go/: README.md  benchmark_report.py  benchmark_test.go  go.mod  models.go  proto_convert.go  run.sh
benchmarks/java/: README.md  analyze.py  benchmark_report.py  pom.xml  run.sh
benchmarks/java25/: README.md  pom.xml
benchmarks/javascript/: README.md  benchmark.js  benchmark_report.py  run.sh
benchmarks/proto/: bench.proto
benchmarks/python/: README.md  benchmark.py  benchmark_report.py  fory_benchmark.py  run.sh
benchmarks/rust/: Cargo.toml  README.md  benchmark_report.py  run.sh
benchmarks/swift/: Package.swift  README.md  benchmark_report.py  run.sh
ci/: build_linux_wheels.py  deploy.sh  release.py  run_ci.py  run_ci.sh
ci/tasks/: cpp.py  java.py  kotlin.py  python_container_build_script.sh
compiler/: README.md  pyproject.toml
compiler/extension/: fory_options.proto
compiler/fory_compiler/: __init__.py  cli.py
cpp/: CMakeLists.txt  README.md
cpp/fory/meta/: BUILD  CMakeLists.txt  field_info.h
csharp/: Directory.Build.props  README.md
dart/: CHANGELOG.md  README.md  pubspec.yaml
docs/: BUILD_ISSUES_ANALYSIS.md  README.md
docs/compiler/: compiler-guide.md  flatbuffers-idl.md  generated-code.md  index.md  protobuf-idl.md  schema-idl.md
docs/guide/: data.md  detail.md  e2.md  e3.md  evolution.md  java_serialization_guide.md
docs/specification/: java_serialization_spec.md  xlang_implementation_guide.md  xlang_serialization_spec.md  xlang_type_mapping.md
go/: README.md
go/fory/: README.md  array_primitive_test.go  array_test.go  buffer.go  buffer_test.go  compatible_scalar.go  compatible_scalar_test.go  decimal.go  decimal_test.go  doc.go  enum.go  enum_test.go  field_info.go  field_spec.go  fory.go  fory_compatible_test.go  fory_test.go  fory_typed_test.go  fory_xlang_test.go  go.mod  limit_test.go  map.go  map_primitive.go  map_primitive_test.go  meta_string_resolver.go  meta_string_resolver_test.go  metastring_resolver_test.go  primitive.go  primitive_test.go  reader.go  ref_resolver_test.go  reference.go  serializer.go  set.go  skip.go  skip_test.go  slice.go  slice_primitive_list.go  slice_primitive_test.go  stream.go  (+16 more)
integration_tests/android_tests/: README.md  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
integration_tests/graalvm_tests/: README.md  pom.xml
integration_tests/grpc_tests/: generate_grpc.py  run_tests.sh
integration_tests/grpc_tests/python/: pyproject.toml
integration_tests/grpc_tests/python/grpc_tests/: grpc_interop.py
integration_tests/idl_tests/: README.md  generate_idl.py  run_java_tests.sh  run_kotlin_tests.sh  run_scala_tests.sh
integration_tests/jdk_compatibility_tests/: .gitignore  pom.xml
integration_tests/jpms_tests/: pom.xml  run_jlink_smoke.sh
integration_tests/latest_jdk_tests/: pom.xml
java/: README.md  pom.xml
java/benchmark/: pom.xml
java/fory-annotation-processor/: README.md  pom.xml
java/fory-core/: pom.xml
java/fory-extensions/: pom.xml
java/fory-format/: pom.xml
java/fory-graalvm-feature/: pom.xml
java/fory-latest-jdk-tests/: pom.xml
java/fory-simd/: pom.xml
java/fory-test-core/: pom.xml
java/fory-testsuite/: pom.xml
javascript/: README.md  package-lock.json  package.json
javascript/test/: any.test.ts  array.test.ts  binary.test.ts  bool.test.ts  crossLanguage.test.ts  datetime.test.ts  decimal.test.ts  depthLimit.test.ts  enum.test.ts  fory.test.ts  hps.test.ts  io.test.ts  map.test.ts  number.test.ts  object.test.ts  set.test.ts  sizeLimit.test.ts  string.test.ts  typemeta.test.ts  union.test.ts
kotlin/: README.md  pom.xml
kotlin/fory-kotlin/: pom.xml
kotlin/fory-kotlin-ksp/: README.md  pom.xml
kotlin/fory-kotlin-tests/: pom.xml
python/: CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  build_nanobind.py  build_nanobind_extensions.sh  debug_details.py  debug_encoding.py  debug_field_matching.py  debug_raw.py  debug_remove.py  debug_schema.py  debug_test.py  demo_enhanced_serializer.py  pyproject.toml  setup.py  standalone_demo.py  test_compatible_serializer_simple.py
python/pyfory/: COMPATIBLE_SERIALIZER_README.md  __init__.py  _fory.py  _registry.py  _serialization.pyx  _struct.py  collection.pxi  collection.py  compatible_serializer.py  compatible_serializer_clean.py  compatible_serializer_complete.py  compatible_serializer_enhanced.py  compatible_serializer_old.py  compatible_serializer_v2.py  context.pxi  context.py  converter.py  field.py  number.pxi  (+9 more)
python/pyfory/nanobind_extensions/: BUILD  CMakeLists.txt  README.md  __init__.py  example.py  nanobind.md  performance_analysis.py  test_buffer_logic.py  test_buffer_performance.py
python/pyfory/nanobind_extensions/src/: buffer.cpp  buffer.hpp  buffer_ops.cpp  math_ops.cpp
python/pyfory/nanobind_extensions/tests/: __init__.py  test_math_ops.py
rust/: Cargo.toml  README.md
scala/: README.md  build.sbt
swift/: README.md
(+1014 files in other folders)
