# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fory-grpc-tests"
version = "0.18.0.dev0"
description = "gRPC compiler integration tests for Apache Fory"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = ["grpcio>=1.62.2,<1.71", "pyfory"]

[tool.setuptools.packages.find]
where = ["."]
include = ["grpc_tests"]
